test.yml
apiVersion: v1
kind: Pod
metadata:
  name: test
  labels:
    app: flask
    type: Server
spec:
  containers:
  - name: aam411/docker:1.04
    image: aam411/docker:1.04
