test2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: load-balancer
  name: flask-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask_loadbalancer
  template:
    metadata:
      labels:
        app: flask_loadbalancer
    spec:
      containers:
      - image: aam411/mydocker:1.04
        name: mydocker
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: flask
spec:
  selector:
    app: flask_loadbalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: LoadBalancer
